[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "minigrep"
path = "src/minigrep.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"

[profile.release]
panic = "abort" # 如果发生 panic，那么程序就会终止, 留给操作系统清理内存
opt-level = 3

[profile.dev]
opt-level = 1
